2009-12-15  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11093]
	* bits/poll.h: Define POLLRDNORM, POLLRDBAND, POLLWRNORM, and
	POLLWRBAND also for POSIX 2008.
	* sysdeps/unix/sysv/linux/bits/poll.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/poll.h: Likewise.

	* include/link.h (struct link_map): Move l_used into its own word.
	* elf/dl-lookup.c (_dl_lookup_symbol_x): Only update l_used when it is
	still zero.
	* elf/dl-object.c (_dl_new_object): Set dl_used if we know it is
	never really used.

2009-12-13  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/strcspn.S Include <init-arch.h>
	instead of <ifunc-defines.h>.  Use bit_XXX and index_XXX to
	check processor feature.
	* sysdeps/i386/i686/multiarch/strlen.S: Likewise.
	* sysdeps/i386/i686/multiarch/strspn.S: Likewise.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_SSE2): New definition.
	(index_SSE2): Likewise.

2009-12-09  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/init-arch.h: Include <ifunc-defines.h>
	if __ASSEMBLER__ is defined.
	(bit_SSSE3): New.  Defined for __ASSEMBLER__.
	(bit_SSE4_2): Likewise.
	(index_SSSE3): Likewise.
	(index_SSE4_2): Likewise.
	* sysdeps/x86_64/multiarch/rawmemchr.S: Include <init-arch.h>
	instead of <ifunc-defines.h>.  Use bit_XXX and index_XXX to
	check processor feature.
	* sysdeps/x86_64/multiarch/strchr.S: Likewise.
	* sysdeps/x86_64/multiarch/strcmp.S: Likewise.
	* sysdeps/x86_64/multiarch/strcpy.S: Likewise.
	* sysdeps/x86_64/multiarch/strcspn.S: Likewise.
	* sysdeps/x86_64/multiarch/strlen.S: Likewise.
	* sysdeps/x86_64/multiarch/strrchr.S: Likewise.
	* sysdeps/x86_64/multiarch/strspn.S: Likewise.

2009-12-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/elf/initfini.c: Update according to generic/initfini.c.

2009-12-01  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/sh/sh4/fpu/fpu_control.h (__set_fpscr): New prototype.

2009-12-11  Ulrich Drepper  <drepper@redhat.com>
